FIX - Background with wrong size in iPhone devices

--- a/inc/scss/_global.scss
+++ b/inc/scss/_global.scss
@@ -17,9 +17,6 @@ body {
     line-height: 1.5;
     background: hsl(0, 0%, 1%);
     color: white;
-	@include backgroundCover;
-	background-image: url("inc/img/grunge-background.jpg");
-	background-attachment: fixed;
 }
 
 *, ::after, ::before {
